# HUIDU-HD-D16-SDKNetAPI

./: .gitignore  CApi.h说明文档.md  CMakeLists.txt  readme.md
build backup/: CMakeCache.txt  Makefile  cmake_install.cmake
include/: ICApi.h
lib/: HCatNet.lib
lib64/: HCatNet.lib
main_code_versions/: mainTest.cpp  main_backup.cpp
src/: main.cpp  mainchat.cpp
src/HCatEvent/: HCatApi.pri  HCatBuffer.h  HCatEvent.pri  HCatEvent.pro  HCatEventCore.cpp  HCatEventCore.h  HCatEventInfo.h  HCatEventStruct.h  HCatForward.h  HCatGcEvent.cpp  HCatIOEvent.cpp  HCatIOReadWriteEvent.cpp  HCatIOReadWriteEvent.h  HCatMainEvent.cpp  HCatMainEvent.h  HCatSignal.h  HCatThread.h  HCatTimeEvent.cpp  HCatTimer.h  HCatTool.cpp  HCatTool.h  ICatEventApi.cpp  ICatEventApi.h  ICatEventData.h
src/HCatEvent/HCatNet/: HCatSerial.cpp  HCatSerial.h  HCatTcpService.cpp  HCatTcpService.h  HCatTcpSocket.cpp  HCatTcpSocket.h  HCatUdpSocket.cpp  HCatUdpSocket.h
src/HCatNet/: CatString.h  HCApiImpl.cpp  HCApiImpl.h  HCatNet.pro  HCatNetApi.pri  HCatNetInfo.h  HCatSyncCoreEvent.cpp  HCatSyncCoreEvent.h  HQtThread.h  ICApi.cpp  ICApi.h  IEventApi.cpp  IEventApi.h  ISession.cpp  ISession.h
src/HCatNet/Net/: HSerialNet.cpp  HTcpNet.cpp  HTcpNet.h  HTcpServiceNet.cpp  HTcpServiceNet.h  HUdpNet.cpp  INetBase.h
src/HCatNet/Protocol/: HHexProtocol.cpp  HHttpProtocol.cpp  HLcdSdkProtocol.cpp  HLcdSdkProtocol.h  HOldSDKProtocol.cpp  HRawStringProtocol.cpp  HRawStringProtocol.h  HSDKProtocol.cpp  HSDKProtocol.h  HSerialSDKProtocol.cpp  HStruct.h  HUdpFindDeviceProtocol.cpp  IProtocolBase.h
src/HCatNet/Tool/: HTool.cpp  HTool.h
src/main_test_prgrams/: Sending_Hex.cpp  main2.cpp  main_backup.cpp  mainchat.cpp
